cmake_minimum_required(VERSION ${CMAKE_VERSION})
project(NSENGINE)

include_directories(
	src
	contrib/windows-cl-amd64/SDL2/include
	contrib/windows-cl-amd64/glew/include
	contrib/windows-cl-amd64/stb/include
)

link_directories(
	${PROJECT_SOURCE_DIR}/contrib/windows-cl-amd64/SDL2/lib
	${PROJECT_SOURCE_DIR}/contrib/windows-cl-amd64/glew/lib
)

add_library(rend
	src/rend/Animation.cpp
	src/rend/Animation.h
	src/rend/Buffer.cpp
	src/rend/Buffer.h
	src/rend/Debug.cpp
	src/rend/Debug.h
	src/rend/Exception.h
	src/rend/Face.h
	src/rend/Font.cpp
	src/rend/Font.h
	src/rend/glm
	src/rend/Mesh.cpp
	src/rend/Mesh.h
	src/rend/Model.cpp
	src/rend/Model.h
	src/rend/ModelShader.cpp
	src/rend/ModelShader.h
	src/rend/rend.h
	src/rend/Renderer.h
	src/rend/RenderTexture.cpp
	src/rend/RenderTexture.h
	src/rend/rendfltk.h
	src/rend/rendgl.h
	src/rend/rendmath.cpp
	src/rend/rendmath.h
	src/rend/rendsdl.h
	src/rend/Shader.cpp
	src/rend/Shader.h
	src/rend/stb_image.h
	src/rend/TextShader.cpp
	src/rend/TextShader.h
	src/rend/Texture.cpp
	src/rend/Texture.h
	src/rend/utils.cpp
	src/rend/utils.h
)

target_link_libraries(rend glew32 opengl32)

add_library(pellet
	src/pellet/btBulletCollisionCommon.h
	src/pellet/btBulletDynamicsCommon.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3BroadphaseCallback.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3OverlappingPair.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/shared/b3Aabb.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3Config.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3Contact4.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3RaycastInfo.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3RigidBodyCL.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3BvhSubtreeInfoData.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3BvhTraversal.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3ClipFaces.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3Collidable.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3Contact4Data.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3ContactConvexConvexSAT.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3ContactSphereSphere.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3ConvexPolyhedronData.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3FindConcaveSatAxis.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3FindSeparatingAxis.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3MprPenetration.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3NewContactReduction.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3QuantizedBvhNodeData.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3ReduceContacts.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3RigidBodyData.h
	src/pellet/Bullet3Collision/NarrowPhaseCollision/shared/b3UpdateAabbs.h
	src/pellet/Bullet3Common/b3AlignedAllocator.h
	src/pellet/Bullet3Common/b3AlignedObjectArray.h
	src/pellet/Bullet3Common/b3CommandLineArgs.h
	src/pellet/Bullet3Common/b3FileUtils.h
	src/pellet/Bullet3Common/b3HashMap.h
	src/pellet/Bullet3Common/b3Logging.h
	src/pellet/Bullet3Common/b3Matrix3x3.h
	src/pellet/Bullet3Common/b3MinMax.h
	src/pellet/Bullet3Common/b3PoolAllocator.h
	src/pellet/Bullet3Common/b3QuadWord.h
	src/pellet/Bullet3Common/b3Quaternion.h
	src/pellet/Bullet3Common/b3Random.h
	src/pellet/Bullet3Common/b3Scalar.h
	src/pellet/Bullet3Common/b3StackAlloc.h
	src/pellet/Bullet3Common/b3Transform.h
	src/pellet/Bullet3Common/b3TransformUtil.h
	src/pellet/Bullet3Common/b3Vector3.h
	src/pellet/Bullet3Common/shared/b3Float4.h
	src/pellet/Bullet3Common/shared/b3Int2.h
	src/pellet/Bullet3Common/shared/b3Int4.h
	src/pellet/Bullet3Common/shared/b3Mat3x3.h
	src/pellet/Bullet3Common/shared/b3PlatformDefinitions.h
	src/pellet/Bullet3Common/shared/b3Quat.h
	src/pellet/Bullet3Dynamics/b3CpuRigidBodyPipeline.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3ContactSolverInfo.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3JacobianEntry.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3SolverBody.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3SolverConstraint.h
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.h
	src/pellet/Bullet3Dynamics/shared/b3ContactConstraint4.h
	src/pellet/Bullet3Dynamics/shared/b3ConvertConstraint4.h
	src/pellet/Bullet3Dynamics/shared/b3Inertia.h
	src/pellet/Bullet3Dynamics/shared/b3IntegrateTransforms.h
	src/pellet/Bullet3Geometry/b3AabbUtil.h
	src/pellet/Bullet3Geometry/b3ConvexHullComputer.h
	src/pellet/Bullet3Geometry/b3GeometryUtil.h
	src/pellet/Bullet3Geometry/b3GrahamScan2dConvexHull.h
	src/pellet/BulletCollision/BroadphaseCollision/btAxisSweep3.h
	src/pellet/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h
	src/pellet/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h
	src/pellet/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h
	src/pellet/BulletCollision/BroadphaseCollision/btDbvt.h
	src/pellet/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h
	src/pellet/BulletCollision/BroadphaseCollision/btDispatcher.h
	src/pellet/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h
	src/pellet/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h
	src/pellet/BulletCollision/BroadphaseCollision/btQuantizedBvh.h
	src/pellet/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h
	src/pellet/BulletCollision/CollisionDispatch
	src/pellet/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btBoxBoxDetector.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionConfiguration.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionDispatcher.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionObject.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionObjectWrapper.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionWorld.h
	src/pellet/BulletCollision/CollisionDispatch/btCollisionWorldImporter.h
	src/pellet/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h
	src/pellet/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btGhostObject.h
	src/pellet/BulletCollision/CollisionDispatch/btHashedSimplePairCache.h
	src/pellet/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h
	src/pellet/BulletCollision/CollisionDispatch/btManifoldResult.h
	src/pellet/BulletCollision/CollisionDispatch/btSimulationIslandManager.h
	src/pellet/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h
	src/pellet/BulletCollision/CollisionDispatch/btUnionFind.h
	src/pellet/BulletCollision/CollisionDispatch/SphereTriangleDetector.h
	src/pellet/BulletCollision/CollisionShapes/btBox2dShape.h
	src/pellet/BulletCollision/CollisionShapes/btBoxShape.h
	src/pellet/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h
	src/pellet/BulletCollision/CollisionShapes/btCapsuleShape.h
	src/pellet/BulletCollision/CollisionShapes/btCollisionMargin.h
	src/pellet/BulletCollision/CollisionShapes/btCollisionShape.h
	src/pellet/BulletCollision/CollisionShapes/btCompoundShape.h
	src/pellet/BulletCollision/CollisionShapes/btConcaveShape.h
	src/pellet/BulletCollision/CollisionShapes/btConeShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvex2dShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvexHullShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvexInternalShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvexPointCloudShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvexPolyhedron.h
	src/pellet/BulletCollision/CollisionShapes/btConvexShape.h
	src/pellet/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h
	src/pellet/BulletCollision/CollisionShapes/btCylinderShape.h
	src/pellet/BulletCollision/CollisionShapes/btEmptyShape.h
	src/pellet/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h
	src/pellet/BulletCollision/CollisionShapes/btMaterial.h
	src/pellet/BulletCollision/CollisionShapes/btMinkowskiSumShape.h
	src/pellet/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h
	src/pellet/BulletCollision/CollisionShapes/btMultiSphereShape.h
	src/pellet/BulletCollision/CollisionShapes/btOptimizedBvh.h
	src/pellet/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h
	src/pellet/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h
	src/pellet/BulletCollision/CollisionShapes/btShapeHull.h
	src/pellet/BulletCollision/CollisionShapes/btSphereShape.h
	src/pellet/BulletCollision/CollisionShapes/btStaticPlaneShape.h
	src/pellet/BulletCollision/CollisionShapes/btStridingMeshInterface.h
	src/pellet/BulletCollision/CollisionShapes/btTetrahedronShape.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleBuffer.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleCallback.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleInfoMap.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleMesh.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleMeshShape.h
	src/pellet/BulletCollision/CollisionShapes/btTriangleShape.h
	src/pellet/BulletCollision/CollisionShapes/btUniformScalingShape.h
	src/pellet/BulletCollision/Gimpact/btBoxCollision.h
	src/pellet/BulletCollision/Gimpact/btClipPolygon.h
	src/pellet/BulletCollision/Gimpact/btCompoundFromGimpact.h
	src/pellet/BulletCollision/Gimpact/btContactProcessing.h
	src/pellet/BulletCollision/Gimpact/btGenericPoolAllocator.h
	src/pellet/BulletCollision/Gimpact/btGeometryOperations.h
	src/pellet/BulletCollision/Gimpact/btGImpactBvh.h
	src/pellet/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h
	src/pellet/BulletCollision/Gimpact/btGImpactMassUtil.h
	src/pellet/BulletCollision/Gimpact/btGImpactQuantizedBvh.h
	src/pellet/BulletCollision/Gimpact/btGImpactShape.h
	src/pellet/BulletCollision/Gimpact/btQuantization.h
	src/pellet/BulletCollision/Gimpact/btTriangleShapeEx.h
	src/pellet/BulletCollision/Gimpact/gim_array.h
	src/pellet/BulletCollision/Gimpact/gim_basic_geometry_operations.h
	src/pellet/BulletCollision/Gimpact/gim_bitset.h
	src/pellet/BulletCollision/Gimpact/gim_box_collision.h
	src/pellet/BulletCollision/Gimpact/gim_box_set.h
	src/pellet/BulletCollision/Gimpact/gim_clip_polygon.h
	src/pellet/BulletCollision/Gimpact/gim_contact.h
	src/pellet/BulletCollision/Gimpact/gim_geometry.h
	src/pellet/BulletCollision/Gimpact/gim_geom_types.h
	src/pellet/BulletCollision/Gimpact/gim_hash_table.h
	src/pellet/BulletCollision/Gimpact/gim_linear_math.h
	src/pellet/BulletCollision/Gimpact/gim_math.h
	src/pellet/BulletCollision/Gimpact/gim_memory.h
	src/pellet/BulletCollision/Gimpact/gim_radixsort.h
	src/pellet/BulletCollision/Gimpact/gim_tri_collision.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btComputeGjkEpaPenetration.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btConvexCast.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkCollisionDescription.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpa3.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btMprPenetration.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btPointCollector.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h
	src/pellet/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h
	src/pellet/BulletDynamics/Character/btCharacterControllerInterface.h
	src/pellet/BulletDynamics/Character/btKinematicCharacterController.h
	src/pellet/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btConstraintSolver.h
	src/pellet/BulletDynamics/ConstraintSolver/btContactConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btContactSolverInfo.h
	src/pellet/BulletDynamics/ConstraintSolver/btFixedConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btGearConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btHinge2Constraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btHingeConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btJacobianEntry.h
	src/pellet/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.h
	src/pellet/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h
	src/pellet/BulletDynamics/ConstraintSolver/btSliderConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btSolverBody.h
	src/pellet/BulletDynamics/ConstraintSolver/btSolverConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btTypedConstraint.h
	src/pellet/BulletDynamics/ConstraintSolver/btUniversalConstraint.h
	src/pellet/BulletDynamics/Dynamics/btActionInterface.h
	src/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h
	src/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.h
	src/pellet/BulletDynamics/Dynamics/btDynamicsWorld.h
	src/pellet/BulletDynamics/Dynamics/btRigidBody.h
	src/pellet/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h
	src/pellet/BulletDynamics/Dynamics/btSimulationIslandManagerMt.h
	src/pellet/BulletDynamics/Featherstone/btMultiBody.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyConstraint.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyJointFeedback.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyJointMotor.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyLink.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyLinkCollider.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodyPoint2Point.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodySliderConstraint.h
	src/pellet/BulletDynamics/Featherstone/btMultiBodySolverConstraint.h
	src/pellet/BulletDynamics/MLCPSolvers/btDantzigLCP.h
	src/pellet/BulletDynamics/MLCPSolvers/btDantzigSolver.h
	src/pellet/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.h
	src/pellet/BulletDynamics/MLCPSolvers/btLemkeSolver.h
	src/pellet/BulletDynamics/MLCPSolvers/btMLCPSolver.h
	src/pellet/BulletDynamics/MLCPSolvers/btMLCPSolverInterface.h
	src/pellet/BulletDynamics/MLCPSolvers/btPATHSolver.h
	src/pellet/BulletDynamics/MLCPSolvers/btSolveProjectedGaussSeidel.h
	src/pellet/BulletDynamics/Vehicle/btRaycastVehicle.h
	src/pellet/BulletDynamics/Vehicle/btVehicleRaycaster.h
	src/pellet/BulletDynamics/Vehicle/btWheelInfo.h
	src/pellet/BulletSoftBody/btDefaultSoftBodySolver.h
	src/pellet/BulletSoftBody/btSoftBody.h
	src/pellet/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.h
	src/pellet/BulletSoftBody/btSoftBodyData.h
	src/pellet/BulletSoftBody/btSoftBodyHelpers.h
	src/pellet/BulletSoftBody/btSoftBodyInternals.h
	src/pellet/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.h
	src/pellet/BulletSoftBody/btSoftBodySolvers.h
	src/pellet/BulletSoftBody/btSoftBodySolverVertexBuffer.h
	src/pellet/BulletSoftBody/btSoftMultiBodyDynamicsWorld.h
	src/pellet/BulletSoftBody/btSoftRigidCollisionAlgorithm.h
	src/pellet/BulletSoftBody/btSoftRigidDynamicsWorld.h
	src/pellet/BulletSoftBody/btSoftSoftCollisionAlgorithm.h
	src/pellet/BulletSoftBody/btSparseSDF.h
	src/pellet/LinearMath
	src/pellet/LinearMath/btAabbUtil2.h
	src/pellet/LinearMath/btAlignedAllocator.h
	src/pellet/LinearMath/btAlignedObjectArray.h
	src/pellet/LinearMath/btConvexHull.h
	src/pellet/LinearMath/btConvexHullComputer.h
	src/pellet/LinearMath/btCpuFeatureUtility.h
	src/pellet/LinearMath/btDefaultMotionState.h
	src/pellet/LinearMath/btGeometryUtil.h
	src/pellet/LinearMath/btGrahamScan2dConvexHull.h
	src/pellet/LinearMath/btHashMap.h
	src/pellet/LinearMath/btIDebugDraw.h
	src/pellet/LinearMath/btList.h
	src/pellet/LinearMath/btMatrix3x3.h
	src/pellet/LinearMath/btMatrixX.h
	src/pellet/LinearMath/btMinMax.h
	src/pellet/LinearMath/btMotionState.h
	src/pellet/LinearMath/btPolarDecomposition.h
	src/pellet/LinearMath/btPoolAllocator.h
	src/pellet/LinearMath/btQuadWord.h
	src/pellet/LinearMath/btQuaternion.h
	src/pellet/LinearMath/btQuickprof.h
	src/pellet/LinearMath/btRandom.h
	src/pellet/LinearMath/btScalar.h
	src/pellet/LinearMath/btSerializer.h
	src/pellet/LinearMath/btSpatialAlgebra.h
	src/pellet/LinearMath/btStackAlloc.h
	src/pellet/LinearMath/btThreads.h
	src/pellet/LinearMath/btTransform.h
	src/pellet/LinearMath/btTransformUtil.h
	src/pellet/LinearMath/btVector3.h
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvh.cpp
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3DynamicBvhBroadphase.cpp
	src/pellet/Bullet3Collision/BroadPhaseCollision/b3OverlappingPairCache.cpp
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3ConvexUtility.cpp
	src/pellet/Bullet3Collision/NarrowPhaseCollision/b3CpuNarrowPhase.cpp
	src/pellet/Bullet3Common/b3AlignedAllocator.cpp
	src/pellet/Bullet3Common/b3Logging.cpp
	src/pellet/Bullet3Common/b3Vector3.cpp
	src/pellet/Bullet3Dynamics/b3CpuRigidBodyPipeline.cpp
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3FixedConstraint.cpp
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3Generic6DofConstraint.cpp
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3PgsJacobiSolver.cpp
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3Point2PointConstraint.cpp
	src/pellet/Bullet3Dynamics/ConstraintSolver/b3TypedConstraint.cpp
	src/pellet/Bullet3Geometry/b3ConvexHullComputer.cpp
	src/pellet/Bullet3Geometry/b3GeometryUtil.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btDbvt.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btDispatcher.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
	src/pellet/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
	src/pellet/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCollisionObject.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
	src/pellet/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btGhostObject.cpp
	src/pellet/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
	src/pellet/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
	src/pellet/BulletCollision/CollisionDispatch/btManifoldResult.cpp
	src/pellet/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
	src/pellet/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
	src/pellet/BulletCollision/CollisionDispatch/btUnionFind.cpp
	src/pellet/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
	src/pellet/BulletCollision/CollisionShapes/btBox2dShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btBoxShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btCapsuleShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btCollisionShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btCompoundShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConcaveShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConeShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvex2dShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexHullShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btCylinderShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btEmptyShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
	src/pellet/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btShapeHull.cpp
	src/pellet/BulletCollision/CollisionShapes/btSphereShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
	src/pellet/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleCallback.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleMesh.cpp
	src/pellet/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
	src/pellet/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
	src/pellet/BulletCollision/Gimpact/btContactProcessing.cpp
	src/pellet/BulletCollision/Gimpact/btGenericPoolAllocator.cpp
	src/pellet/BulletCollision/Gimpact/btGImpactBvh.cpp
	src/pellet/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
	src/pellet/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
	src/pellet/BulletCollision/Gimpact/btGImpactShape.cpp
	src/pellet/BulletCollision/Gimpact/btTriangleShapeEx.cpp
	src/pellet/BulletCollision/Gimpact/gim_box_set.cpp
	src/pellet/BulletCollision/Gimpact/gim_contact.cpp
	src/pellet/BulletCollision/Gimpact/gim_memory.cpp
	src/pellet/BulletCollision/Gimpact/gim_tri_collision.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
	src/pellet/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
	src/pellet/BulletDynamics/Character/btKinematicCharacterController.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpring2Constraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
	src/pellet/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
	src/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
	src/pellet/BulletDynamics/Dynamics/btDiscreteDynamicsWorldMt.cpp
	src/pellet/BulletDynamics/Dynamics/btRigidBody.cpp
	src/pellet/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
	src/pellet/BulletDynamics/Dynamics/btSimulationIslandManagerMt.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBody.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyFixedConstraint.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
	src/pellet/BulletDynamics/Featherstone/btMultiBodySliderConstraint.cpp
	src/pellet/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
	src/pellet/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
	src/pellet/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
	src/pellet/BulletDynamics/Vehicle/btRaycastVehicle.cpp
	src/pellet/BulletDynamics/Vehicle/btWheelInfo.cpp
	src/pellet/BulletInverseDynamics/details/MultiBodyTreeImpl.cpp
	src/pellet/BulletInverseDynamics/details/MultiBodyTreeInitCache.cpp
	src/pellet/BulletInverseDynamics/IDMath.cpp
	src/pellet/BulletInverseDynamics/MultiBodyTree.cpp
	src/pellet/BulletSoftBody/btDefaultSoftBodySolver.cpp
	src/pellet/BulletSoftBody/btSoftBody.cpp
	src/pellet/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
	src/pellet/BulletSoftBody/btSoftBodyHelpers.cpp
	src/pellet/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
	src/pellet/BulletSoftBody/btSoftMultiBodyDynamicsWorld.cpp
	src/pellet/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
	src/pellet/BulletSoftBody/btSoftRigidDynamicsWorld.cpp
	src/pellet/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
	src/pellet/LinearMath/btAlignedAllocator.cpp
	src/pellet/LinearMath/btConvexHull.cpp
	src/pellet/LinearMath/btConvexHullComputer.cpp
	src/pellet/LinearMath/btGeometryUtil.cpp
	src/pellet/LinearMath/btPolarDecomposition.cpp
	src/pellet/LinearMath/btQuickprof.cpp
	src/pellet/LinearMath/btSerializer.cpp
	src/pellet/LinearMath/btThreads.cpp
	src/pellet/LinearMath/btVector3.cpp
)

add_library(nsengine
	src/nsengine/nsengine.h
	src/nsengine/Core.cpp
	src/nsengine/Core.h
	src/nsengine/Entity.cpp
	src/nsengine/Entity.h
	src/nsengine/Component.cpp
	src/nsengine/Component.h
	src/nsengine/TriangleRenderer.cpp
	src/nsengine/TriangleRenderer.h
	src/nsengine/Resource.cpp
	src/nsengine/Resource.h
	src/nsengine/Resources.cpp
	src/nsengine/Resources.h
	src/nsengine/Transform.cpp
	src/nsengine/Transform.h
	src/nsengine/Environment.cpp
	src/nsengine/Environment.h
	src/nsengine/Input.cpp
	src/nsengine/Input.h
	src/nsengine/Texture.cpp
	src/nsengine/Texture.h
	src/nsengine/Model.cpp
	src/nsengine/Model.h
	src/nsengine/Renderer.cpp
	src/nsengine/Renderer.h
	src/nsengine/BoxCollider.cpp
	src/nsengine/BoxCollider.h
	src/nsengine/RigidBody.cpp
	src/nsengine/RigidBody.h
	)
	
set_property(TARGET nsengine PROPERTY CXX_STANDARD 17)
target_link_libraries(nsengine rend SDL2 pellet)

add_executable(demo
	src/demo/player.h
	src/demo/main.cpp
)

set_property(TARGET demo PROPERTY CXX_STANDARD 17)
target_link_libraries(demo nsengine)